Added : Employee Payroll App and Home Page

--- a/EmployeePayrollHomePage.html
+++ b/EmployeePayrollHomePage.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="..\Day45Employee_Payroll_Home_Page\EmployeePayrollHomePage.css">
+    <link rel="stylesheet" href="EmployeePayrollHomePage.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,600;1,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <title>Employee Payroll App</title>
-    <link rel="icon" href="..\Day45Employee_Payroll_Home_Page\assets\logo\BL_logo_square_jpg.jpg">
+    <link rel="icon" href="..\Day46EmployeePayrollAppHomePage_CURD\assets\logo\BL_logo_square_jpg.jpg">
 </head>
 <body>
     <header class="header-content">
         <div class="logo-content">
-            <img class="logo-content-img" src="C:\Users\user\Desktop\bridgelabz\JavaScript\Day45Employee_Payroll_Home_Page\assets\images\logo.png" alt = "">
+            <img class="logo-content-img" src="..\Day46EmployeePayrollAppHomePage_CURD\assets\images\logo.png" alt = "">
             <div>
                 <span class="emp-text">EMPLOYEE</span><br>
                 <span class="emp-text emp-payroll">PAYROLL</span>
@@ -25,8 +25,8 @@
             <div class="emp-detail-text">
                 Employee Details <div class="emp-count">11</div>
             </div>
-            <a href=".." class="add-button">
-                <img src="../Day45Employee_Payroll_Home_Page\assets\icons\attach_file-24px.svg" alt="">Add User
+            <a href="Employee_Payroll_App.html" class="add-button">
+                <img src="..\Day45Employee_Payroll_Home_Page\assets\icons\attach_file-24px.svg" alt="">Add User
             </a>
         </div> <!--header-content-->
     </div>
