--- a/EmployeePayrollAppFormPage.html
+++ b/EmployeePayrollAppFormPage.html
@@ -3,25 +3,9 @@
     <head>
         <title>Employee Payroll App</title>
         <link rel="icon" href="..\Day46EmployeePayrollAppHomePage_CURD\assets\logo\BL_logo_square_jpg.jpg" type="image/icon type">
-<link rel="stylesheet" href="Employee_Payroll_App.css">
+<link rel="stylesheet" href="EmployeePayrollAppFormPage.css">
 <script src="Employee_Payroll_App.js"> </script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-.btn {
-  background-color: DodgerBlue;
-  border: none;
-  color: white;
-  padding: 12px 16px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-/* Darker background on mouse-over */
-.btn:hover {
-  background-color: RoyalBlue;
-}
-</style>
-
     </head>
     <body>
         <header class="header-content">
@@ -32,8 +16,8 @@
                     <span class="emp-text emp-payroll">PAYROLL</span>
                 </div>
             </div>
-            <div class="back-button">
-                <button class="btn"><i class="fa fa-home"><a href="EmployeePayrollHomePage.html" class="back">Back-to-Home</a></i> </button>
+            <div class="back-Button">
+                <button class="btn"><i class="fa fa-address-book"><a href="EmployeePayrollHomePage.html" class="back">Back-to-Home</a></i> </button>
             </div>
         </header>
         <div class="form-content">
@@ -162,7 +146,7 @@
                     <textarea id="notes" class="input" name="Notes" placeholder="" style="height:100px"></textarea>
                 </div>
                 <div class="buttonParent">
-                    <a href="./home.html" class="resetButton button cancelButton">Cancel</a>
+                    <a href="EmployeePayrollHomePage.html" class="resetButton button cancelButton">Cancel</a>
                     <div class="submit-reset">
                         <button type="submit" class="button submitButton" id="submitButton">Submit</button>
                         <button type="reset" class="resetButton button">Reset</button>
@@ -171,6 +155,7 @@
                 
             </form>
         </div>
-        <script src="..\Day43Employee_Payroll_App\Employee_Payroll_App.js"> </script>
+        <script src="Employee_Payroll_Data.js"> </script>
+        <script src="EmployeePayrollAppFormPage.js"> </script>
     </body>
 </html>
